--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </head>
 
   <body>
-    <h1>Weather Search</h1>
+    <div class="container">
+      <h1>Weather Search</h1>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
