--- a/index.html
+++ b/index.html
@@ -17,7 +17,29 @@
 
   <body>
     <div class="container">
-      <h1>Weather Search</h1>
+      <div class="weather-app">
+        <h1>Johannesburg</h1>
+        <ul>
+          <li>Saturday 21:35</li>
+          <li>Clear with periodic clouds</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
+              alt="image"
+            />
+            12℃ | ℉
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 25%</li>
+              <li>Wind: 16 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="src/index.js"></script>
   </body>
