Styled main elements of the page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             </ul>
           </div>
         </div>
+        <small>
+          <a href="https://github.com/KagisoMakgaba1/Vanilla-weather-app"
+            >Open-source code</a
+          >
+          by Kagiso Makgaba
+        </small>
       </div>
     </div>
     <script src="src/index.js"></script>
