Styled the temperature section

--- a/index.html
+++ b/index.html
@@ -18,18 +18,26 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <h1>Johannesburg</h1>
-        <ul>
-          <li>Saturday 21:35</li>
-          <li>Clear with periodic clouds</li>
-        </ul>
+        <div class="description">
+          <h1>Johannesburg</h1>
+          <ul>
+            <li>Saturday 21:35</li>
+            <li>Clear with periodic clouds</li>
+          </ul>
+        </div>
         <div class="row">
           <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
-              alt="image"
-            />
-            12℃ | ℉
+            <div class="d-flex weather-temperature">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
+                alt="image"
+                class="float-left"
+              />
+              <div class="float-left">
+                <strong>12</strong>
+                <span class="units">℃ | <a href="#">℉</a></span>
+              </div>
+            </div>
           </div>
           <div class="col-6">
             <ul>
