--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="container">
       <div class="weather-app">
         <div class="description">
-          <h1 id="city"></span></h1>
+          <h1 id="city"></h1>
           <ul>
-            <li>Saturday 21:35</li>
+            <li>Last updated: <span id="date"></span></li>
             <li id="description"></li>
           </ul>
         </div>
