--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
   <body>
     <div class="container">
       <div class="weather-app">
+        <form id="search-form" class="mb-3">
+          <div class="row">
+            <div class="col-9">
+              <input
+                type="text"
+                placeholder="Enter city name.."
+                class="form-control"
+                id="city-input"
+                autocomplete="off"
+                autofocus="on"
+              />
+            </div>
+            <div class="col-3">
+              <input type="submit" value="search" class="btn btn-primary" />
+            </div>
+          </div>
+        </form>
         <div class="description">
           <h1 id="city"></h1>
           <ul>
