--- a/index.html
+++ b/index.html
@@ -45,15 +45,13 @@
         <div class="row">
           <div class="col-6">
             <div class="d-flex weather-temperature">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
-                alt="image"
-                id="icon"
-                class="float-left"
-              />
+              <img src="" alt="clear" id="icon" class="float-left" />
               <div class="float-left">
                 <strong id="temperature"></strong>
-                <span class="units">℃ | <a href="#">℉</a></span>
+                <span class="units"
+                  ><a href="#" id="celsius-link" class="active">℃</a> |
+                  <a href="#" id="fahrenheit-link">℉</a></span
+                >
               </div>
             </div>
           </div>
