--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <div class="weather-forecast" id="forecast"></div>
         <hr />
         <small>
-          <a href="https://github.com/KagisoMakgaba1/Vanilla-weather-app"
-            >Open-source code</a
+          Coded by Kagiso Makgaba, and is <a href="https://github.com/KagisoMakgaba1/Vanilla-weather-app"
+            >open-sourced on Github</a 
           >
-          by Kagiso Makgaba
+          and <a href="">hosted on Netlify.</a>
         </small>
       </div>
     </div>
