--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
         <div class="weather-forecast" id="forecast"></div>
         <hr />
         <small>
-          Coded by Kagiso Makgaba, and is <a href="https://github.com/KagisoMakgaba1/Vanilla-weather-app"
-            >open-sourced on Github</a 
+          Coded by Kagiso Makgaba, and is
+          <a href="https://github.com/KagisoMakgaba1/Vanilla-weather-app"
+            >open-sourced on Github</a
           >
-          and <a href="">hosted on Netlify.</a>
+          and
+          <a href="https://eloquent-bienenstitch-2df3cc.netlify.app"
+            >hosted on Netlify.</a
+          >
         </small>
       </div>
     </div>
